KUBERNETES/ingress/demo-13/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: login-app.service.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: login-app-service
            port:
              number: 80
      - path: /welcome
        pathType: Prefix
        backend:
          service:
            name: login-app-service
            port:
              number: 80
      - path: /endpoint
        pathType: Prefix
        backend:
          service:
            name: login-app-service
            port:
              number: 80
      - path: /podinfo
        pathType: Prefix
        backend:
          service:
            name: login-app-service
            port:
              number: 80
  - host: payment-app.service.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: payment-app-service
            port:
              number: 80
      - path: /welcome
        pathType: Prefix
        backend:
          service:
            name: payment-app-service
            port:
              number: 80
      - path: /endpoint
        pathType: Prefix
        backend:
          service:
            name: payment-app-service
            port:
              number: 80
      - path: /podinfo
        pathType: Prefix
        backend:
          service:
            name: payment-app-service
            port:
              number: 80
  - host: checkout-app.service.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: checkout-app-service
            port:
              number: 80
      - path: /welcome
        pathType: Prefix
        backend:
          service:
            name: checkout-app-service
            port:
              number: 80
      - path: /endpoint
        pathType: Prefix
        backend:
          service:
            name: checkout-app-service
            port:
              number: 80
      - path: /podinfo
        pathType: Prefix
        backend:
          service:
            name: checkout-app-service
            port:
              number: 80
